# TicTacToe

./: .gitignore  Cargo.toml
board_game/: Cargo.toml
board_game/src/: board.rs  consts.rs  game_executor.rs  game_manager.rs  lib.rs  main.rs  message.rs  player.rs  printer.rs  tile.rs
board_game/src/message/: request_message.rs  response_message.rs
board_game/src/printer/: clear.rs  color.rs  position.rs
script/: clean_logs.py
tui_game/: Cargo.toml
tui_game/src/: lib.rs  main.rs  ui.rs
tui_game/src/ui/: screen.rs  state.rs
tui_game/src/ui/screen/: game_on_screen.rs  main_screen.rs
