[workspace]
members = ["board_game", "tui_game"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.85"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
rand = "0"
tokio = { version = "1", features = ["full"] }
async-trait = "0"
ratatui = "0"
tracing = "0"
tracing-appender = "0"
color-eyre = "0"
tracing-subscriber = { version = "0", features = ["std", "env-filter"] }
num_enum = "0"
crossterm = { version = "0", features = ["event-stream"] }
futures = "0"
