[package]
name = "board_game"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
crossterm.workspace = true
tokio.workspace = true
async-trait.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
