[package]
name = "tui_game"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
board_game = { path = "../board_game" }
