[package]
name = "tui_game"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
color-eyre.workspace = true
ratatui.workspace = true
num_enum.workspace = true
crossterm.workspace = true
futures.workspace = true
board_game = { path = "../board_game" }
